--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -28,3 +28,25 @@
     left: 50%;
     margin: -40px 10 0 -60px;
 }
+
+hr{
+    border: 1px solid #EBF5EE;
+}
+
+h1{
+    color: #EBF5EE;
+}
+
+.form-group{
+    float: right;
+    padding-right: 18px;
+    margin-top: -40px;
+}
+
+.col-xs-2{
+    padding-right: 20px;
+}
+
+.row{
+    clear: both;
+}
