--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,8 +3,9 @@
     border: 10px solid transparent;
     background-clip: padding-box;
     height: 180px;
-    background-color: #78A1BB;
+    background-color:#445887;
     position: relative;
+    
   }
   
   body{
@@ -51,3 +52,6 @@ h1{
     clear: both;
 }
 
+.container{
+    padding-top: 10px;
+}
